--- a/src/drug_response_prediction.ipynb
+++ b/src/drug_response_prediction.ipynb
@@ -1352,9 +1352,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "L1000_2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "l1000_2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1366,7 +1366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
